adjusted the files for economic calendar in the tester files

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2023_11_5.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2024_2_4.csv'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,14 +36,14 @@
     "day = sunday.day\n",
     "# import the file\n",
     "filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
-    "# filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2023_11_5.csv\"\n",
+    "# filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2024_2_4.csv\"\n",
     "df = pd.read_csv(filename)\n",
     "filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -76,127 +76,120 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023.11.06 10:15:00</td>\n",
-       "      <td>(Spain) HCOB Services PMI</td>\n",
+       "      <td>2024.02.05 09:00:00</td>\n",
+       "      <td>(Germany) Balance of Trade</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023.11.06 10:45:00</td>\n",
-       "      <td>(Italy) HCOB Services PMI</td>\n",
+       "      <td>2024.02.05 10:15:00</td>\n",
+       "      <td>(Spain) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023.11.06 10:50:00</td>\n",
-       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>2024.02.05 10:45:00</td>\n",
+       "      <td>(Italy) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2023.11.06 10:55:00</td>\n",
-       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>2024.02.05 10:50:00</td>\n",
+       "      <td>(France) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023.11.06 11:00:00</td>\n",
-       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>2024.02.05 10:55:00</td>\n",
+       "      <td>(Germany) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2023.11.07 10:30:00</td>\n",
-       "      <td>(Euro Area) ECB De Guindos Speech</td>\n",
+       "      <td>2024.02.05 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2023.11.08 09:00:00</td>\n",
-       "      <td>(Germany) CPI</td>\n",
+       "      <td>2024.02.05 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2023.11.08 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales YoY</td>\n",
+       "      <td>2024.02.05 17:00:00</td>\n",
+       "      <td>(United States) ISM Services PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2023.11.08 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2023.11.08 12:00:00</td>\n",
+       "      <td>2024.02.06 12:00:00</td>\n",
        "      <td>(Euro Area) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2023.11.08 12:00:00</td>\n",
+       "      <th>9</th>\n",
+       "      <td>2024.02.06 12:00:00</td>\n",
        "      <td>(Euro Area) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2023.11.08 16:15:00</td>\n",
-       "      <td>(United States) Fed Chair Powell Speech</td>\n",
+       "      <th>10</th>\n",
+       "      <td>2024.02.07 11:00:00</td>\n",
+       "      <td>(Italy) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024.02.07 11:00:00</td>\n",
+       "      <td>(Italy) Retail Sales MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2023.11.09 15:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2023.11.09 15:30:00</td>\n",
-       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2023.11.09 15:30:00</td>\n",
+       "      <td>2024.02.08 15:30:00</td>\n",
        "      <td>(United States) Continuing Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2023.11.09 21:00:00</td>\n",
-       "      <td>(United States) Fed Chair Powell Speech</td>\n",
+       "      <th>13</th>\n",
+       "      <td>2024.02.08 15:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2023.11.10 14:30:00</td>\n",
-       "      <td>(Euro Area) ECB President Lagarde Speech</td>\n",
+       "      <th>14</th>\n",
+       "      <td>2024.02.08 15:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024.02.09 09:00:00</td>\n",
+       "      <td>(Germany) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2023.11.10 17:00:00</td>\n",
-       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.02.09 15:30:00</td>\n",
+       "      <td>(United States) CPI s.a</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
@@ -206,24 +199,23 @@
       ],
       "text/plain": [
        "                   Date                                          Event Impact  \\\n",
-       "0   2023.11.06 10:15:00                      (Spain) HCOB Services PMI   High   \n",
-       "1   2023.11.06 10:45:00                      (Italy) HCOB Services PMI   High   \n",
-       "2   2023.11.06 10:50:00                     (France) HCOB Services PMI   High   \n",
-       "3   2023.11.06 10:55:00                    (Germany) HCOB Services PMI   High   \n",
-       "4   2023.11.06 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
-       "5   2023.11.07 10:30:00              (Euro Area) ECB De Guindos Speech   High   \n",
-       "6   2023.11.08 09:00:00                                  (Germany) CPI   High   \n",
-       "7   2023.11.08 11:00:00                       (Italy) Retail Sales YoY   High   \n",
-       "8   2023.11.08 11:00:00                       (Italy) Retail Sales MoM   High   \n",
-       "9   2023.11.08 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
-       "10  2023.11.08 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
-       "11  2023.11.08 16:15:00        (United States) Fed Chair Powell Speech   High   \n",
-       "12  2023.11.09 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "13  2023.11.09 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "14  2023.11.09 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "15  2023.11.09 21:00:00        (United States) Fed Chair Powell Speech   High   \n",
-       "16  2023.11.10 14:30:00       (Euro Area) ECB President Lagarde Speech   High   \n",
-       "17  2023.11.10 17:00:00    (United States) Michigan Consumer Sentiment   High   \n",
+       "0   2024.02.05 09:00:00                     (Germany) Balance of Trade   High   \n",
+       "1   2024.02.05 10:15:00                      (Spain) HCOB Services PMI   High   \n",
+       "2   2024.02.05 10:45:00                      (Italy) HCOB Services PMI   High   \n",
+       "3   2024.02.05 10:50:00                     (France) HCOB Services PMI   High   \n",
+       "4   2024.02.05 10:55:00                    (Germany) HCOB Services PMI   High   \n",
+       "5   2024.02.05 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
+       "6   2024.02.05 16:45:00        (United States) S&P Global Services PMI   High   \n",
+       "7   2024.02.05 17:00:00               (United States) ISM Services PMI   High   \n",
+       "8   2024.02.06 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
+       "9   2024.02.06 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
+       "10  2024.02.07 11:00:00                       (Italy) Retail Sales YoY   High   \n",
+       "11  2024.02.07 11:00:00                       (Italy) Retail Sales MoM   High   \n",
+       "12  2024.02.08 15:30:00      (United States) Continuing Jobless Claims   High   \n",
+       "13  2024.02.08 15:30:00         (United States) Initial Jobless Claims   High   \n",
+       "14  2024.02.08 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
+       "15  2024.02.09 09:00:00                                  (Germany) CPI   High   \n",
+       "16  2024.02.09 15:30:00                        (United States) CPI s.a   High   \n",
        "\n",
        "   Currency  \n",
        "0       EUR  \n",
@@ -232,21 +224,20 @@
        "3       EUR  \n",
        "4       EUR  \n",
        "5       EUR  \n",
-       "6       EUR  \n",
-       "7       EUR  \n",
+       "6       USD  \n",
+       "7       USD  \n",
        "8       EUR  \n",
        "9       EUR  \n",
        "10      EUR  \n",
-       "11      USD  \n",
+       "11      EUR  \n",
        "12      USD  \n",
        "13      USD  \n",
        "14      USD  \n",
-       "15      USD  \n",
-       "16      EUR  \n",
-       "17      USD  "
+       "15      EUR  \n",
+       "16      USD  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
