added win_rate per hour at the bottom

--- a/parsing_journal.ipynb
+++ b/parsing_journal.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "[13015 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[13015 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "[13015 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "12763  2023.11.09 14:30:00   Closing Sell Ticket: SMI crossing above -40 T..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "12763 2023-11-09 14:30:00   Closing Sell Ticket: SMI crossing above -40 T..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "[203 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "[203 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,17 +1406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save df_closing to a csv file\n",
-    "df_reindex.to_csv('journal_comparison_Oct_backtest_closing_after_1st_round.csv', index=False)"
+    "# df_reindex.to_csv('journal_comparison_Oct_backtest_closing_after_1st_round.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
        "[330 rows x 14 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1997,7 @@
        "[203 rows x 12 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,17 +2016,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# df_joined_comparison.to_csv('journal_comparison_Oct_backtest_closing_with_reasons.csv', index=False)\n",
-    "df_joined_comparison_opp.to_csv('journal_comparison_Oct_backtest_closing_with_reasons_opp.csv', index=True)"
+    "# df_joined_comparison_opp.to_csv('journal_comparison_Oct_backtest_closing_with_reasons_opp.csv', index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2719,7 @@
        "2023-11-09 17:02:00  entered earlier on backtest because of impulse...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2730,6 +2730,192 @@
     "# just show the columns Time_EST, action, Profit, entry, and Reason for difference\n",
     "trade_exits_sel = trade_exits.loc[:, ['Time_EST', 'action', 'Profit', 'entry', 'Reason for difference']]\n",
     "trade_exits_sel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the win rate for trade_exits\n",
+    "overall_win_rate = trade_exits.loc[trade_exits['Profit'] > 0].shape[0] / trade_exits.shape[0]\n",
+    "# create a column that contains the hour of the day from the Time_EST column\n",
+    "trade_exits['hour'] = trade_exits['Time_EST'].dt.hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>win rate</th>\n",
+       "      <th>num trades</th>\n",
+       "      <th>avg pos profit</th>\n",
+       "      <th>avg neg profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hour</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-469.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>445.666667</td>\n",
+       "      <td>-525.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>814.333333</td>\n",
+       "      <td>-548.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2002.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>133.000000</td>\n",
+       "      <td>-526.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1019.666667</td>\n",
+       "      <td>-493.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-283.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1164.800000</td>\n",
+       "      <td>-486.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-569.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-518.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1337.000000</td>\n",
+       "      <td>-483.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29.630000</td>\n",
+       "      <td>-493.420000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      win rate  num trades  avg pos profit  avg neg profit\n",
+       "hour                                                      \n",
+       "4     0.000000           5             NaN     -469.000000\n",
+       "5     0.500000           6      445.666667     -525.000000\n",
+       "6     1.000000           2      490.000000             NaN\n",
+       "7     0.500000           6      814.333333     -548.333333\n",
+       "8     1.000000           3     2002.000000             NaN\n",
+       "9     0.250000           8      133.000000     -526.166667\n",
+       "10    0.600000           5     1019.666667     -493.500000\n",
+       "11    0.000000           2             NaN     -283.500000\n",
+       "12    0.555556           9     1164.800000     -486.500000\n",
+       "13    0.000000           3             NaN     -569.333333\n",
+       "14    0.000000           2             NaN     -518.000000\n",
+       "15    0.600000           5     1337.000000     -483.000000\n",
+       "17    0.666667           3       29.630000     -493.420000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the win rate for each hour of the day\n",
+    "hourly_win_rate = trade_exits.groupby('hour')['Profit'].apply(lambda x: (x > 0).sum() / x.shape[0])\n",
+    "# convert hourly_win_rate to a dataframe\n",
+    "hourly_win_rate_df = pd.DataFrame(hourly_win_rate)\n",
+    "# rename the column to 'win rate'\n",
+    "hourly_win_rate_df.columns = ['win rate']\n",
+    "# add a column that contains the number of trades for each hour of the day\n",
+    "hourly_win_rate_df['num trades'] = trade_exits.groupby('hour')['Profit'].count()\n",
+    "# add a column that contains the average positive profit for each hour of the day\n",
+    "hourly_win_rate_df['avg pos profit'] = trade_exits.groupby('hour')['Profit'].apply(lambda x: x[x > 0].mean())\n",
+    "# add a column that contains the average negative profit for each hour of the day\n",
+    "hourly_win_rate_df['avg neg profit'] = trade_exits.groupby('hour')['Profit'].apply(lambda x: x[x < 0].mean())\n",
+    "hourly_win_rate_df"
    ]
   }
  ],
